Defect fixes and css updates

--- a/airport.css
+++ b/airport.css
@@ -7,3 +7,11 @@
 .airport .code {
     padding-right: 10px;
 }
+
+.airport .message {
+    max-width: 400px;
+}
+
+.airport .weather {
+    max-width: 400px;
+}
